syntax = "proto3";
package config_service;
option go_package = "github.com/domino14/liwords/rpc/api/proto/config_service";

message EnableGamesRequest { bool enabled = 1; }

message ConfigResponse {}

service ConfigService {
  rpc SetGamesEnabled(EnableGamesRequest) returns(ConfigResponse);
}